# herd-shepherd-wolf-coevolution

./: .gitignore  README.md  config.yaml  hidepygame.py  pyproject.toml  test.py
.github/workflows/: format.yml
entities/: sheep.py  shepherd.py
informes/: Bibliografia-y-propuesta-de-solucion.tex  refs.bib
informes/src/: Bibliografia-y-propuesta-de-solucion.tex  Informe.tex  Propuestas.tex  neurips.sty  refs.bib
models/: NNShepherd.py  agent.py  followMouseShepherd.py  sheep.py  shepherd.py  strombomSheep.py
models/trained/: 20251110_164421.json  20251110_164421.npy  20251111_184804.json  20251111_184804.npy  20251112_113135.json  20251112_113135.npy  20251112_113608.json  20251112_113608.npy  20251112_114846.json  20251112_114846.npy  20251112_115420.json  20251112_115420.npy  20251112_120002.json  20251112_120002.npy  20251112_120956.json  20251112_120956.npy  20251112_160432.json  20251112_160432.npy  20251112_173134.json  20251112_173134.npy  20251112_182834.json  20251112_182834.npy  20251112_220945.json  20251112_220945.npy  20251112_221300.json  20251112_221300.npy  20251112_222147.json  20251112_222147.npy  20251112_224424.json  20251112_224424.npy  20251112_232526.json  20251112_232526.npy  20251112_232725.json  20251112_232725.npy  20251112_233513.json  20251112_233513.npy  20251113_000647.json  20251113_000647.npy  20251113_011356.json  (+41 more)
scripts/: plot.py  run_sim.py  run_train.py
sim/: entity.py  interface.py  sheep.py  shepherd.py  utils.py  window.py  world.py
training/: evaluador.py  utils.py
visualizador/: Test.py  Visualizador.py
